= Changelog

All notable changes to Apiman will be documented here (as of Apiman 3).

// tag::3.2.0-SNAPSHOT[]
== 3.2.0-SNAPSHOT

=== Added

=== Changed

=== Removed

=== Fixed

* [gateway-vertx]: do not include `null`/empty path elements in Keycloak discovery URI. 
If your Vert.x Gateway API was unable to speak to Keycloak because it had an unexpected `null` in the URI, this should fix it. By https://github.com/msavy[Marc Savy (@msavy)^].

* Multiple small MSSQL (Microsoft SQL Server) DDL fixes. By https://github.com/msavy[Marc Savy (@msavy)^].

// end::3.2.0-SNAPSHOT[]

== 3.1.1.Final

* No changes, this additional release was needed due to a problem with Apiman's CI/CD pipelines.

// tag::3.1.0.Final[]
== 3.1.0.Final

=== Added

* [metrics-es]: allow logging metrics to file with `write-to` option. To facilitate scrape-based metrics patterns, this commit allows Apiman's ES metrics to be written to a log file as JSON via whichever logging framework you are using (asynchronously). You can set any combination of `remote` (ES server) or/and `log` (local). By https://github.com/msavy[Marc Savy (@msavy)^].

=== Changed

* A variety of dependencies have been updated across the Apiman codebase in order to keep users secure. If you don't want to upgrade, speak to your long-term support provider.

* [manager-api-rest]: Apiman Manager API now has an OpenAPI v3 schema! You can access this at `/openapi.json` or `/openapi.yml`. For example, http://localhost:8080/apiman/openapi.json. By https://github.com/msavy[Marc Savy (@msavy)^].

* Default plugin registry and API catalogue JSON files are now in the GitHub release, rather than directly in the repository. By https://github.com/msavy[Marc Savy (@msavy)^].
