@@ -1,5 +1,5 @@
 <!--
-  ~ Copyright 2021 Scheer PAS Schweiz AG
+  ~ Copyright 2023 Scheer PAS Schweiz AG
   ~
   ~  Licensed under the Apache License, Version 2.0 (the "License");
   ~  you may not use this file except in compliance with the License.
@@ -16,11 +16,7 @@
 
 <a
   [routerLink]="['/swagger', orgId, apiId, apiVersionNumber]"
-  [queryParams]="{
-    try: tryItOut,
-    publicAPI: publicApi,
-    contractId: contractId
-  }"
+  [queryParams]="queryParams"
   target="{{ target }}">
   <button id="api-docs-btn" mat-raised-button color="primary">
     {{ 'COMMON.API_DOCS' | translate }}
