@@ -1,5 +1,5 @@
 /*!
- * Copyright 2022 Scheer PAS Schweiz AG
+ * Copyright 2023 Scheer PAS Schweiz AG
  *
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
@@ -17,8 +17,8 @@
 img {
   background-size: cover;
   border-radius: 50%;
-  width: 32px;
-  height: 32px;
+  width: 40px;
+  height: 40px;
 
   // for alt attribute
   font-size: 0.6rem;
@@ -27,6 +27,7 @@ img {
 .api-icon {
   display: flex;
   align-items: center;
-  font-size: 32px;
-  height: 32px;
+  font-size: 40px;
+  height: 40px;
+  width: 40px;
 }
